hard-gists/6092292/run.log
=== Docker Run Log for 6092292 ===
Started at: Mi 29. Okt 16:19:27 CET 2025

[2025-10-29 16:19:27] START: Running container for 6092292
[2025-10-29 16:19:28] SUCCESS: Container a67f0db1e4f431cd229f106b0c61b96652ce6e789972b52aa83959c12d9e64de started for 6092292
=== Container logs for 6092292 ===
  File "/snippet.py", line 95
    print "Beginning scan of: %s" % WHISPER_PATH
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6092292 ===
[2025-10-29 16:19:30] INFO: Container a67f0db1e4f431cd229f106b0c61b96652ce6e789972b52aa83959c12d9e64de has stopped
